Add sort and fix night mode toggle issue on the editor

--- a/extra/persianedit.html
+++ b/extra/persianedit.html
@@ -14,6 +14,7 @@
             <textarea placeholder="این یک ویرایشگر سادهٔ فارسی با قابلیت ذخیرهٔ حودکار متن در مرورگرتان است." style="background-color: #EAEAEA; font-size: 120%; width: 100%; height: 20em; font-family: 'Segoe UI', Tahoma, sans-seris;">متن</textarea>
             <div style="font-size: 80%; margin: .5em">
                 <button onclick="superTool()">ابرابزار</button>
+                <button onclick="persianSortTextButton()">ترتیب الفبا</button>
                 <button onclick="toggleNightMode()">حالت شب</button>
             </div>
             <script src="persiantools.js"></script>
@@ -35,9 +36,45 @@
                     document.body.classList.add("night-mode")
             }
 
+            function dePersian(text) {
+                return text
+                    .replace(/ی/g, "ي")
+                    .replace(/ک/g, "ك")
+                    .replace(/ھ/g, "ه")
+                    .replace(/پ/g, "بی")
+                    .replace(/چ/g, "جی")
+                    .replace(/ڕ/g, "ری")
+                    .replace(/ژ/g, "زی")
+                    .replace(/ڤ/g, "فی")
+                    .replace(/ڵ/g, "لی")
+                    .replace(/گ/g, "كی")
+                    .replace(/ۆ/g, "وی")
+                    .replace(/ە/g, "هی")
+                    .replace(/ێ/g, "يي");
+            }
+
+            function persianSortText(text) {
+                return text.split('\n').sort(function (x, y) {
+                    var keyX = dePersian(x),
+                        keyY = dePersian(y);
+                    if (keyX < keyY) {
+                        return -1;
+                    }
+                    if (keyX > keyY) {
+                        return 1;
+                    }
+                    return 0;
+                }).join('\n');
+            }
+
+            function persianSortTextButton() {
+                var editor = document.querySelector('textarea');
+                editor.value = persianSortText(editor.value);
+            }
+
             document.addEventListener("DOMContentLoaded", function (event) {
                 document.querySelector('textarea').value = localStorage.getItem("text") || '';
-                if (localStorage.getItem("night-mode")) toggleNightMode();
+                if (localStorage.getItem("night-mode") === "true") toggleNightMode();
             });
             
             setInterval(function () {
